--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pipreqs = "^0.4.11"
 albumentations = "^1.3.0"
 fonttools = "^4.39.2"
 lmdb = "^1.4.0"
@@ -19,6 +18,7 @@ timm = "^0.6.13"
 rich = "^13.3.3"
 torch = "^2.0.0"
 torchvision = "^0.15.1"
+lightning = "^2.0.0"
 
 
 [build-system]
